animeFP and userFP dynamic js result loading